<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleTeam">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teama_label"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score1"
                android:gravity="center"
                android:textSize="55sp"
                android:text="@string/score0"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="click"
                android:text="@string/points1_label" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="click"
                android:text="@string/points2_label" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="click"
                android:text="@string/points3_label" />

        </LinearLayout>

        <TextView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamb_label"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score2"
                android:gravity="center"
                android:textSize="55sp"
                android:text="@string/score0"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btnb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="clickb"
                android:text="@string/points1_label" />

            <Button
                android:id="@+id/btnb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="clickb"
                android:text="@string/points2_label" />

            <Button
                android:id="@+id/btnb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#3F51B5"
                android:onClick="clickb"
                android:text="@string/points3_label" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:background="#3F51B5"
        android:onClick="click"
        android:text="@string/reset_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>